--- a/README
+++ b/README
@@ -12,10 +12,12 @@ HashTable των viruses περιλαμβάνει: το όνομα του ιού
 
 ΠΑΡΑΔΟΧΕΣ
 - Η συνάρτηση insert_citizen_record παίρνει σαν παράμετρο και ένα flag, το οποίο καθορίζει αν η συνάρτηση καλείται στην αρχή με το διάβασμα του αρχείου (1) ή στη συνέχεια με εντολή απο
-το πληκτρολόγιο (0). Η διαφορά των δυο περιπτώσεων είναι στην αντιμετώπιση των διπλότυπων εγγραφών.
+το πληκτρολόγιο (0). Η διαφορά των δυο περιπτώσεων είναι στην αντιμετώπιση της περίπτωσης που ένας citizen είναι καταχωρημένος ως not_vaccinated και έρθει εγγραφή με YES.
 - Για τα dates έχει δημιουργεί μια δομή που περιλαμβάνει 3 ints (day, month, year).
 - Για τις εντολές populationStatus και popStatusByAge έχουν υλοποιηθεί από 4 συναρτήσεις για την κάθε μια για να καλύψουν όλες τις πιθανές περιπτώσεις (με/χωρίς country, με/χωρίς
 dates).
+- Για κάθε εντολή δεσμεύονται τόσα tokens όσα και οι max παράμετροι που μπορούν να δοθούν για κάθε εντολή + 1 ακόμα token για να ελέγχεται η περίπτωση που ο χρήστης δώσει μια
+παραπάνω παράμετρο.
 
 BASH SCRIPT
 Αρχικά, ελέγχει αν ο αριθμός και οι τιμές των παραμέτρων που δόθηκαν από τη γραμμή εντολών είναι σωστά, διαβάζει τα αρχεία που δόθηκαν και αποθηκεύει την κάθε γραμμή τους σε πίνακα.
