--- a/README
+++ b/README
@@ -12,7 +12,8 @@ HashTable των viruses περιλαμβάνει: το όνομα του ιού
 
 ΠΑΡΑΔΟΧΕΣ
 - Η συνάρτηση insert_citizen_record παίρνει σαν παράμετρο και ένα flag, το οποίο καθορίζει αν η συνάρτηση καλείται στην αρχή με το διάβασμα του αρχείου (1) ή στη συνέχεια με εντολή απο
-το πληκτρολόγιο (0). Η διαφορά των δυο περιπτώσεων είναι στην αντιμετώπιση της περίπτωσης που ένας citizen είναι καταχωρημένος ως not_vaccinated και έρθει εγγραφή με YES.
+το πληκτρολόγιο (0). Η διαφορά των δυο περιπτώσεων είναι στην αντιμετώπιση της περίπτωσης που ένας citizen είναι καταχωρημένος ως not_vaccinated και έρθει εγγραφή με YES. Έτσι,
+με την εκκίνηση του προγράμματος εκτυπώνονται και αντίστοιχα μηνύματα για τις μη αποδεκτές εγγραφές που υπάρχουν στο αρχείο.
 - Για τα dates έχει δημιουργεί μια δομή που περιλαμβάνει 3 ints (day, month, year).
 - Για τις εντολές populationStatus και popStatusByAge έχουν υλοποιηθεί από 4 συναρτήσεις για την κάθε μια για να καλύψουν όλες τις πιθανές περιπτώσεις (με/χωρίς country, με/χωρίς
 dates).
